--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -16275,7 +16275,7 @@
 "~^/doc/r.*/1987-rossi$" "/doc/sociology/1987-rossi";
 "~^/doc/psychology/PQ.*$" "/doc/psychology/index";
 "~^/doc/psychology/personality/conscientiousness/1991-barrick.pdfD.*$" "/doc/psychology/personality/conscientiousness/1991-barrick.pdf";
-"~^/doc/modafinil/2004-makris.pd%5Cf$" "";
+"~^/doc/modafinil/2004-makris.pd%5Cf$" "/doc/modafinil/2004-makris.pdf";
 "~^/doc/economics/1980-arrow.pdf\|journal.*$" "/doc/economics/1980-arrow.pdf";
 "~^/doc/darknet-market/2012-01-18-tony76reviews$" "/doc/darknet-market/2012-01-18-tony76reviews.maff";
 "~^/doc/cat/valerian/$" "/doc/cat/psychology/drug/valerian/index";
@@ -16402,6 +16402,102 @@
 "~^/bookreviews$" "/review/book";
 "~^/Scaling-Hypothesis$" "/scaling-hypothesis";
 "~^/doc/www/www.baen.com/572e2ecdc772265468532c789a8f7d19febccea9.html/favicon.ico$" "https://www.baen.com/favicon.ico";
+"~^/static/font/blackletter/Dearest.ttf$" "https://wiki.obormot.net/Main/BonusFontsDemo?demo_font_one=Dearest";
+"~^/.*/Ethical-sperm-donation$" "/ethical-sperm-donation";
+"~^/List_of_works_for_the_stage_by_Richard_Wagner$" "https://en.wikipedia.org/wiki/List_of_works_for_the_stage_by_Richard_Wagner";
+"~^/fassle-macrodosing$" "/lsd-microdosing";
+"~^/tag/artificial-intelligence$" "/doc/ai/index";
+"~^/Something_That_May_Shock_and_Discredit_You$" "https://en.wikipedia.org/wiki/Something_That_May_Shock_and_Discredit_You";
+"~^/scaling-hypothesis.Bubeck.*$" "/scaling-hypothesis";
+"~^/Rule_of_least_power$" "https://en.wikipedia.org/wiki/Rule_of_least_power";
+"~^/robots.tx%EF.*$" "/robots.txt";
+"~^/ritonavir.html$" "/doc/biology/2000-iapac-norvir/index.html";
+"~^/Peter_Drucker$" "https://en.wikipedia.org/wiki/Peter_Drucker";
+"~^/.*/The-Melancholy-of-Subculture-Society$" "/subculture";
+"~^/.*/Hydrocephalus$" "/hydrocephalus";
+"~^/LSD-microdosingAccor.*$" "/lsd-microdosing";
+"~^/Gender_transitioning$" "https://en.wikipedia.org/wiki/Gender_transitioning";
+"~^/doc/statistics/decision/2016-08-%C2%BF$" "/doc/statistics/decision/2016-08-20-candyjapan-decisiontree-n9.csv";
+"~^/docsig/1982-reedpdf$" "/doc/iq/1982-reed.pdf";
+"~^/doc/rubrication/$" "/doc/typography/rubrication/index";
+"~^/doc/psychology/writing/1990-parisreview-irismurdochinterview.html[0-9].*" "/doc/psychology/writing/1990-parisreview-irismurdochinterview.html";
+"~^/doc/psychology/cognitive-bias/illusion-of-depth/1990-newton$" "/doc/psychology/cognitive-bias/illusion-of-depth/1990-newton.pdf";
+"~^/doc/psychology/2015-07-26-412$" "/doc/psychology/neuroscience/2015-07-26-neuroskeptic-isyourbrainreallynecessary.html";
+"~^/doc/personal/uVP.*$" "/doc/personal/index";
+"~^/doc/music/music-distraction/-1989-mayfield\.pdf.*$" "/doc/music/music-distraction/1989-mayfield.pdf";
+"~^/doc/fiction/science-fiction/2020/.*x1315-fall-isexuallyidentifyasanattackhelicopter.html$" "/doc/fiction/science-fiction/2020-01-15-fall-isexuallyidentifyasanattackhelicopter.html";
+"~^/doc/darknet-market/2015-03-30-0$" "/doc/darknet-market/2015-03-30-gwern-redditsubpoena.html";
+"~^/doc/darknet-market/2011-06-21-pgpkeys$" "/doc/darknet-market/2011-06-21-pgpkeys.maff";
+"~^/doc/bitcoin/2012-swartz-decentralizedexchange.html$" "/doc/bitcoin/index";
+"~^/doc/biology/about/j_articles.html$" "/doc/biology/2000-iapac-norvir/";
+"~^/doc/ai/scaling/hardware/1999-bradbury-matr$" "/doc/ai/scaling/hardware/1999-bradbury-matrioshkabrains.pdf";
+"~^/doc/ai/1985-holland-2\.pdf.*$" "/doc/reinforcement-learning/multi-agent/1985-holland.pdf";
+"~^/doc/2007-wolfe%EF%BC%89.*$" "/doc/culture/2007-wolfe";
+"~^/anime-criticism-is-not-about-quality.md$" "/anime-criticism.md";
+"~^/Colder-Wars/$" "/colder-wars";
+"~^/Simulation$" "/simulation";
+"~^/searchOv.*$" "/search";
+"~^/doc/ai/2021-jouppi.PDT$" "/doc/ai/scaling/hardware/2021-jouppi.pdf";
+"~^/doc/anime/eva/1996-newtype-anno-interviewContext$" "/doc/anime/eva/1996-newtype-anno-interview";
+"~^/conseq/faqcons1.html$" "/doc/biology/2000-iapac-norvir/conseq/faqcons1.html";
+"~^/.search.html$" "/doc/biology/2000-iapac-norvir/search.html";
+"~^/.whatsnew.html$" "/doc/biology/2000-iapac-norvir/whatsnew.html";
+"~^/doc/cat/catnip/survey$" "/doc/cat/psychology/drug/catnip/survey/index";
+"~^/doc/longevity/2017-zhou\.pdf.*$" "/doc/cs/algorithm/2017-zhou.pdf";
+"~^/doc/culture/2010-dobelli.pdft$" "/doc/culture/2010-dobelli.pdf";
+"~^/doc/darknet-market/2011-06-21-0$" "/doc/darknet-market/2011-06-21-pgpkeys.maff";
+"~^/doc/2010-zeidan\.pdf.*$" "/doc/dual-n-back/2010-zeidan.pdf";
+"~^/doc/genetics/2014-cronqvist\.pdf.*$" "/doc/genetics/heritable/2014-cronqvist.pdf";
+"~^/doc/genetic/heritable/index$" "/doc/genetics/heritable/index";
+"~^/doc/genetics/2009-massie\.pdf.*$" "/doc/genetics/selection/artificial/2009-massie.pdf";
+"~^/doc/his-tory/1994-wilton\.pdf.*$" "/doc/history/1994-wilton.pdf";
+"~^/doc/a$" "/doc/ai/index";
+"~^/doc/iq/1992-fein-gold\.pdf.*$" "/doc/iq/1992-feingold.Pdf";
+"~^/doc/iq/high/munich/2004-heller.pdfH$" "/doc/iq/high/munich/2004-heller.pdf";
+"~^/doc/japanese$" "/doc/japan/index";
+"~^/doc/personal/cogref_process.html$" "/doc/personal/2011-gwern-yourmorals.org/cogref_process.html";
+"~^/doc/psychology/2015-1$" "/doc/psychology/index";
+"~^/doc/pshycology/okcupid/thebestquestionsforafirstdate.html$" "/doc/psychology/okcupid/thebestquestionsforafirstdate.html";
+"~^/doc/psychology/writing/2019-1$" "/doc/psychology/writing/index";
+"~^/doc/statistics/2012-prasad\.pdf.*$" "/doc/statistics/causality/2012-prasad.pdf";
+"~^/doc/statistics/1958-blom-orderstatistics\.pdf.*$" "/doc/statistics/order/1958-blom-orderstatistics.pdf";
+"~^/doc/genetics/selection/www.mountimprobable.com/statistics/order/beanmachine-multistage/beanmachine-demo.png$" "/doc/statistics/order/beanmachine-multistage/beanmachine-demo.png";
+"~^/fiction/The-Snowbanks-of-Time/index.html$" "/fiction/the-snowbanks-of-time";
+"~^/doc/sunkcosts/1993-brockner\.pdf.*$" "/doc/sunk-cost/1992-brockner.pdf";
+"~^/doc/touhou/2013-06-08-acircle-tohoarrangeb.xz$" "/doc/touhou/2013-06-08-acircle-tohoarrange.csv";
+"~^/doc/zeo/2012-0$" "/doc/zeo/index";
+"~^/Drug-heurist$" "/drug-heuristic";
+"~^/Embryo-editingAn$" "/embryo-editing";
+"~^/Embryo_editing$" "/embryo-editing";
+"~^/eveything$" "/everything";
+"~^/fiction/%C3%B0$" "/fiction/index";
+"~^/forking-paths.md$" "/forking-path.mad";
+"~^/chosen$" "/index";
+"~^/doc/cat/guestbook$" "/doc/cat/index";
+"~^/.links.html$" "/doc/newest/index";
+"~^/.*/Melon$" "/melon";
+"~^/newsletter/2015/14$" "/newsletter/2015/index";
+"~^/newsletter/2013/13$" "/newsletter/20123/index";
+"~^/note/ramsey.md$" "/note/frank-ramsey.md";
+"~^/.*/Hafu$" "/hafu";
+"~^/MacNamara$" "/review/mcnamara";
+"~^/review/movies.md$" "/reviews/movie.md";
+"~^/SMPY\?utm_source.*$" "/smpy";
+"~^/searcch$" "/search";
+"~^/sitemap.sip/$" "/sitemap.xml";
+"~^/static/font/dropcap/dropcat/light/I-1-small-1x.png$" "/static/font/dropcap/dropcat/light/I-light-1-small-1x.png";
+"~^/static/font/dropcap/dropcat/light/C-2-small-1x.png$" "/static/font/dropcap/dropcat/light/C-light-2-small-1x.png";
+"~^/static/font/dropcap/gene-wolfe/light/T-02.png$" "/static/font/dropcap/gene-wolfe/light/T-light-02.svg";
+"~^/doc/psychiatry/favicon.ico$" "/static/img/favicon.ico";
+"~^/doc/fiction/poetry/2011-yvain-iliadaslawsuit.html/favicon.ico$" "https://astralcodexten.comfavicon.ico";
+"~^/static/img/chi-dna.svg$" "/static/img/icon/chi-dna.svg";
+"~^/doc/erowid.svg$" "/static/img/icon/erowid.svg";
+"~^/static/img/openai.svg$" "/static/img/icon/openai.svg";
+"~^/static/404~$" "/static/404";
+"~^/Wikipedia:News$" "http://en.wikipedia.org/wiki/Wikipedia:News";
+"~^/cocaine$" "https://en.wikipedia.org/wiki/Cocaine";
+"~^/feeed$" "https://gwern.substack.com/feed";
+"~^/GPT-0$" "https://openai.com/blog/language-unsupervised/";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~/.*mailto:.*$" "/static/404";
