--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -16498,6 +16498,8 @@
 "~^/cocaine$" "https://en.wikipedia.org/wiki/Cocaine";
 "~^/feeed$" "https://gwern.substack.com/feed";
 "~^/GPT-0$" "https://openai.com/blog/language-unsupervised/";
+"~^/[Nn]ovelty-nets.*$" "/novelty-net";
+"~^/.*Novelty-net.*$" "/novelty-net";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~/.*mailto:.*$" "/static/404";
