--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -11327,3 +11327,6 @@ default "";
 "~^/doc/science/2024-03-13-gwern-dalle3-quantumthief-omnisfmagazinecoverstyle-green-thumbnail.jpg.*$" "/doc/fiction/science-fiction/2024-03-13-gwern-dalle3-quantumthief-omnisfmagazinecoverstyle-green-thumbnail.jpg";
 "~^/doc/psychology/2014-oppezzo.pdf.*$" "/doc/psychology/novelty/2014-oppezzo.pdf";
 "~^/doc/design/typography/1981-knuth.pdf.*$" "/doc/design/typography/tex/1981-knuth.pdf";
+"~^/doc/iq/2024-edwards-figure2-intelligenceandpoliticalattitudes.png.*$" "/doc/iq/2024-edwards-figure1-intelligenceandpoliticalattitudes.png";
+"~^/doc/iq/2010-lopez.pdf.*$" "https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3016382/";
+"~^/doc/politics/2021-rasmussen.pdf.*$" "/doc/politics/2021-rasmussen-2.pdf";
