--- a/nginx/gwern.net.conf
+++ b/nginx/gwern.net.conf
@@ -824,6 +824,7 @@ server {
         rewrite ^/(?<old>.*)`(?<old2>.*)$ /$old$old2 permanent;
         rewrite ^/(?<old>.*)\.page/index\.html$ /$old.md permanent;
         rewrite ^/(?<old>.*)\.page/$ /$old.md permanent;
+        rewrite ^/(?<old>.*)\.page\.html$ /$old.md.html permanent;
         rewrite ^/(?<old>.*)/N/A$ /$old permanent;
         rewrite ^/(?<first>.*)‐(?<second>.*)$ /$first-$second permanent; # convert HYPHEN (which is bad!) to what everyone thinks HYPHEN is, HYPHEN-MINUS
         rewrite ^/(?<first>.*)\+(?<second>.*)$ /$first-$second permanent;
