--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -16435,7 +16435,7 @@
 "~^/doc/2007-wolfe%EF%BC%89.*$" "/doc/culture/2007-wolfe";
 "~^/anime-criticism-is-not-about-quality.md$" "/anime-criticism.md";
 "~^/Colder-Wars/$" "/colder-wars";
-"~^/Simulation$" "/simulation";
+"~^/Simulation$" "/simulation-inference";
 "~^/searchOv.*$" "/search";
 "~^/doc/ai/2021-jouppi.PDT$" "/doc/ai/scaling/hardware/2021-jouppi.pdf";
 "~^/doc/anime/eva/1996-newtype-anno-interviewContext$" "/doc/anime/eva/1996-newtype-anno-interview";
@@ -16500,6 +16500,75 @@
 "~^/GPT-0$" "https://openai.com/blog/language-unsupervised/";
 "~^/[Nn]ovelty-nets.*$" "/novelty-net";
 "~^/.*Novelty-net.*$" "/novelty-net";
+"~^/doc/rotten.com/page.*$" "/doc/rotten.com/index";
+"~^/doc/cs/2001-demarco-peoplewarewhymeasureperformance\.pdf.*$" "/doc/cs/algorithm/2001-demarco-peopleware-whymeasureperformance.pdf";
+"~^/doc/culture/1983-wolfe-yhecitadeloftheautarch-thejustman$" "/doc/culture/1983-wolfe-thecitadeloftheautarch-thejustman";
+"~^/doc/economics/1688-del$" "/doc/economics/1688-delavega-confusionofconfusions.pdf";
+"~^/links.md$" "/me.md";
+"~^/[Ww]ikipedia-and-Dark-Side-ing$" "/wikipedia-and-dark-side-editing";
+"~^/star\.md.*$" "/startup-idea.md";
+"~^/doc/reinforcement-learning/model-free/-1991-gardner-ch8amatchboxgamelearningmachine\.pdf.*$" "/doc/reinforcement-learning/model-free/1991-gardner-ch8amatchboxgamelearningmachine.pdf";
+"~^/doc/technology/2006-waitcalculation.html$" "/doc/statistics/decision/2006-kennedy.pdf";
+"~^/fiction/How-the-Panther-got-Black.*$" "/fiction/how-the-panther-got-black";
+"~^/doc/zeo/2012-gominak.pdfA.*$" "/doc/zeo/2012-gominak.pdf";
+"~^/doc/modafinil/darknet-market/2015-%EF%BF%BD.*$" "/doc/modafinil/darknet-market/index";
+"~^/doc/modafinil/1994-de-s%EF%BF%BDr%EF%BF%BDville\.pdf.*$" "/doc/modafinil/1994-desereville.pdf";
+"~^/doc/cs/linkrot/archiving/cs.*/index$" "/doc/cs/linkrot/archiving/index";
+"~^/The-Narrowing-Circle.*$" "/narrowing-circle";
+"~^/The-Melancholy-of-Kyon.*$" "/kyon";
+"~^/Summer-of-Code$" "/haskell/summer-of-code";
+"~^/.*/No-favicon-address.*$" "/static/img/favicon.png";
+"~^/static/build/LinkArchive-refactor.hs$" "/static/build/LinkArchive.hs";
+"~^/sources-of-religious-experience.*$" "/religious-experience";
+"~^/review/anime.page.html.*$" "/review/anime.md.html";
+"~^/otaku-predictions.*$" "/otaku-predictions";
+"~^/note/psychedelics$" "/doc/psychology/psychedelic/index";
+"~^/note/Fermi.*$" "/note/fermi";
+"~^/.*/Prediction-markets$" "/prediction-market";
+"~^/Mao_Zedong$" "https://en.wikipedia.org/wiki/Mao_Zedong";
+"~^/Kvsh/.*$" "/static/404";
+"~^/immoral-books.*$" "/immoral-book";
+"~^/GPT-2-music.*$" "/gpt-2-music";
+"~^/Google-shutdowns.*$" "/google-shutdowns";
+"~^/fiction/The-Snowbanks-of-Time.*$" "/fiction/the-snowbanks-of-time";
+"~^/fiction/Hybrid-Rainbow.*$" "/fiction/hybrid-rainbow";
+"~^/fiction/Genshiken.*$" "/fiction/genshiken";
+"~^/fiction/Brave-poem.*" "/fiction/brave-poem";
+"~^/doc/psychology/tinder/index$" "/doc/psychology/okcupid/index";
+"~^/doc/philosophy/ethics/ethicists/%C2%BF.*$" "/doc/philosophy/ethics/ethicists/";
+"~^/doc/philosophy/ethics/%EF%BF%BD.*$" "/doc/philosophy/ethics/index";
+"~^/doc/iodine/1968-fierro-ben$" "/doc/iodine/1968-fierrobenitez.pdf";
+"~^/doc/genetics/editing/2017-lee-2\.pdf.*$" "/doc/genetics/editing/2017-lee.pdf";
+"~^/doc/cs/hardware/2020-troise.pdf%C3%AF%C2%.*$" "/doc/cs/hardware/2020-troise.pdf";
+"~^/doc/cs/%EF%BF%BD.*$" "/doc/cs/index";
+"~^/doc/ajXn.*$" "/doc/index";
+"~^/doc/ai/gain/index$" "/doc/ai/nn/gan/index";
+"~^/doc/anime/eva/1997-a$" "/doc/anime/eva/1996-newtype-anno-interview";
+"~^/doc/Bitcoin/$" "/doc/bitcoin/index";
+"~^/doc/cs/2001-12-02-tr$" "/doc/cs/2001-12-02-treginaldgibbons-isyoursonacomputerhacker.html";
+"~^/doc/economics/advertising/2019-03-21-0$" "/doc/economics/advertising/index";
+"~^/doc/eva$" "/doc/eva/index";
+"~^/doc/fict$" "/doc/fiction/index";
+"~^/doc/iq/1959-mann$" "/doc/iq/1959-mann.pdf";
+"~^/doc/nicotine/2008-herman\.pdf.*$" "/doc/nicotine/2008-hernan.pdf";
+"~^/doc/psychology/-1952-asch\.pdf.*$" "/doc/psychology/1952-asch.pdf";
+"~^/doc/sociology/1962-calhoun.pdf%E2%80%8Bwww.gwern.net/sociology/1962-calhoun\.pdf.*$" "/doc/sociology/1962-calhoun.pdf";
+"~^/doc/1985-pate-technicalreport\.pdf.*$" "/doc/sociology/1985-pate-technicalreport.pdf";
+"~^/doc/genetics/causality/1973-hays\.pdf.*$" "/doc/statistics/causality/1973-hays.pdf";
+"~^/drug$" "/drug-heuristics";
+"~^/form.html$" "/static/404";
+"~^/Clipp$" "/fiction/Clippy";
+"~^/fiction/Clipp$" "/fiction/clippy";
+"~^/GPT-3Brown$" "/gpt-3";
+"~^/GPT-3nonfiction$" "/gpt-3-nonfiction";
+"~^/metadata/custom.gtx$" "/metadata/full.gtx";
+"~^/miletians$" "/miletian";
+"~^/Nico$" "/nicotine";
+"~^/Film-review$" "/review/movie";
+"~^/simulation$" "/simulation-inference";
+"~^/static/build/Inflation$" "/static/build/Inflation.hs";
+"~^/static/font/NotoEmoji-Bold.ttf$" "/static/font/noto-emoji/NotoEmoji-Bold.ttf";
+"~^/doc/psychology/016-levitt\.pdf.*$" "/doc/psychology/cognitive-bias/2020-levitt.pdf";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~/.*mailto:.*$" "/static/404";
@@ -22354,6 +22423,14 @@
 "~^/.*/Jarnet.com.*$" "/static/404";
 "~^/.*bestlesbian.*$" "/static/404";
 "~^/db_backup.*$" "/static/404";
+"~^/.*assetnote-callback.*$" "/static/404";
+"~^/.*ENV_NAME.*$" "/static/404";
+"~^/.*\.log4j\.*$" "/static/404";
+"~^/.*param=enableapi.*$" "/static/404";
+"~^/.*jk-status.*$" "/static/404";
+"~^/.*RemoteApplicationMetadata.*$" "/static/404";
+"~^/.*openidm/.*$" "/static/404";
+"~^/.*assessment_thanks.*$" "/static/404";
 
 # removed feature:
 "~^/static/previews/.*\.png$" "/static/404";
