--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -16569,6 +16569,134 @@
 "~^/static/build/Inflation$" "/static/build/Inflation.hs";
 "~^/static/font/NotoEmoji-Bold.ttf$" "/static/font/noto-emoji/NotoEmoji-Bold.ttf";
 "~^/doc/psychology/016-levitt\.pdf.*$" "/doc/psychology/cognitive-bias/2020-levitt.pdf";
+"~^/The_Melancholy_of_Haruhi_Suzumiya$" "https://en.wikipedia.org/wiki/The_Melancholy_of_Haruhi_Suzumiya";
+"~^/doc/modafinil/darknet-market/2015-%C3%B0.*$" "/doc/modafinil/darknet-market/index";
+"~^/web.archive.org/web/20190611113107im_/$" "/static/404";
+"~^/web.archive.org/web/20190611103635/$" "/static/404";
+"~^/.tolerability.html$" "/doc/biology/2000-iapac-norvir/tolerability.html";
+"~^/.temperature.html$" "/doc/biology/2000-iapac-norvir/temperature.html";
+"~^/static/font/dropcap/cheshire/Cheshire-Initials$" "/static/font/dropcap/cheshire/index";
+"~^/.softgelnr.html$" "/doc/biology/2000-iapac-norvir/softgelnr.html";
+"~^/.ina100cw1.html$" "/doc/biology/2000-iapac-norvir/ina100cw1.html";
+"~^/.faqina.html$" "/doc/biology/2000-iapac-norvir/faqina.html";
+"~^/doc/reinforcement-learning/model/pX.*$" "/doc/reinforcement-learning/model/index";
+"~^/d1oc/psychology/1952-asch.pdf.*$" "/doc/psychology/1952-asch.pdf";
+"~^/.adherence.html$" "/doc/biology/2000-iapac-norvir/adherence.html";
+"~^/.abt_byrn.html$" "/doc/biology/2000-iapac-norvir/abt_byrn.html";
+"~^/static/js/MathJax.js$" "https://cdnjs.cloudflare.com/ajax/libs/mathjax/latest/MathJax.js?config=default";
+"~^/static/font/dropcap/ninit/light/C-12-abstract.svg$" "";
+"~^/Self-decrypting.2011.*$" "/self-decrypting";
+"~^/Rules_of_the_Death_Note$" "https://deathnote.fandom.com/wiki/Rules_of_the_Death_Note";
+"~^/Resilient-Haskell-Software.$" "/resilient-software";
+"~^/.*/Order-statistics$" "/order-statistics";
+"~^/Isomorphisms.*$" "/ismorphism";
+"~^/.*/%EF%BF%BD/Girl-Scouts-and-good-governance.*$" "/girl-scouts";
+"~^/fiction/the-snowbanks-of-time\?.*$" "/fiction/snowbank";
+"~^/.faqcons.html$" "/doc/biology/2000-iapac-norvir/faqcons.html";
+"~^/doc/sociology/2018-pianta$" "/doc/sociology/2018-pianta.pdf";
+"~^/doc/psychology/per...21-jonason\.pdf.*$" "/doc/psychology/personality/psychopathy/2021-jonason.pdf";
+"~^/doc/personal/2011-gwern-yourmorals.org/mis.html$" "/doc/personal/2011-gwern-yourmorals.org/mis_process.html";
+"~^/doc/nicotine/1...The.*$" "/doc/nicotine/index";
+"~^/doc/newsletter/index/rss$" "https://gwern.substack.com/feed";
+"~^/doc/newsletter/index/feed$" "https://gwern.substack.com/feed";
+"~^/doc/.*/Russian_cosmism$" "https://en.wikipedia.org/wiki/Russian_cosmism";
+"~^/doc/.*/Quantum_dot$" "https://en.wikipedia.org/wiki/Quantum_dot";
+"~^/doc/.*/Pseudoephedrine$" "https://en.wikipedia.org/wiki/Pseudoephedrine";
+"~^/doc/.*/Phenylephrine$" "https://en.wikipedia.org/wiki/Phenylephrine";
+"~^/doc/.*/Olaf_Stapledon$" "https://en.wikipedia.org/wiki/Olaf_Stapledon";
+"~^/doc/.*/Nikolai_Berdyaev$" "https://en.wikipedia.org/wiki/Nikolai_Berdyaev";
+"~^/doc/.*/Lupin_the_Third$" "https://en.wikipedia.org/wiki/Lupin_the_Third";
+"~^/doc/.*/French_Foreign_Legion$" "https://en.wikipedia.org/wiki/French_Foreign_Legion";
+"~^/doc/.*/EverQuest$" "https://en.wikipedia.org/wiki/EverQuest";
+"~^/doc/.*/Eclipse_Phase$" "https://en.wikipedia.org/wiki/Eclipse_Phase";
+"~^/doc/.*/Burglary$" "https://en.wikipedia.org/wiki/Burglary";
+"~^/doc/.*/Babylon_5$" "https://en.wikipedia.org/wiki/Babylon_5";
+"~^/doc/melatonin/1998-lewy.PDF.*$" "/doc/melatonin/1998-lewy.pdf";
+"~^/doc/iq/www.sciencedirect.com/science/journal/01602896$" "https://www.sciencedirect.com/science/journal/01602896";
+"~^/doc/genetics/heritable/correlation/2019-watson$" "/doc/genetics/heritable/correlation/2019-watson.pdf";
+"~^/doc/genetics/heritable/2002-rhee$" "/doc/genetics/heritable/2002-rhee.pdf";
+"~^/doc/2008-satoshi$" "/doc/bitcoin/2008-nakamoto";
+"~^/d...ey-2\.pdf.*$" "/doc/index";
+"~^/Danbooru2020/tag.json$" "/danbooru2020";
+"~^/d1oc/psychology/1952-asch.pdf-%E2%80%8B$" "/doc/psychology/1952-asch.pdf";
+"~^/CSCOE.*$" "/static/404";
+"~^/Console-Insurance\?.*$" "/console-insurance";
+"~^/compnews/abb90630.html$" "https://web.archive.org/web/20000229125251/http://www.iapac.org/compnews/abb90630.html";
+"~^/clinmgt/avtherapies/patient/resistancebk.html$" "https://web.archive.org/web/20011224183749/http://iapac.org:80/clinmgt/avtherapies/patient/resistancebk.html";
+"~^/ChAI.*$" "/static/404";
+"~^/canary.html$" "/private/canary";
+"~^/bundle.js$" "/static/404";
+"~^/bong88.*$" "/static/404";
+"~^/ads\?.*$" "/bannner";
+"~^/.help.html$" "/doc/biology/2000-iapac-norvir/help.html";
+"~^/dualnback$" "/dnb-faq";
+"~^/DNB%D9%AA20$" "/dnb-faq";
+"~^/Blackmarket-arrests$" "/dnm-arrest";
+"~^/blackmarket-survival$" "/dnm-survival";
+"~^/doc/ai/nn/fully-connected/%C3%B0$" "/doc/ai/nn/fully-connected/index";
+"~^/doc/gpt-3$" "/doc/ai/nn/transformer/gpt/3/index";
+"~^/doc/2011-houe$" "/doc/anime/eva/2011-house";
+"~^/.abt_dintruff.html$" "/doc/biology/2000-iapac-norvir/abt_dintruff.html";
+"~^/.abt_lichter.html$" "/doc/biology/2000-iapac-norvir/abt_lichter.html";
+"~^/.abt_sun.html$" "/doc/biology/2000-iapac-norvir/abt_sun.html";
+"~^/adherence.html$" "/doc/biology/2000-iapac-norvir/adherence.html";
+"~^/.ask.html$" "/doc/biology/2000-iapac-norvir/ask.html";
+"~^/.committee.html$" "/doc/biology/2000-iapac-norvir/committee.html";
+"~^/.consequences.html$" "/doc/biology/2000-iapac-norvir/consequences.html";
+"~^/.description.html$" "/doc/biology/2000-iapac-norvir/description.html";
+"~^/.faq.html$" "/doc/biology/2000-iapac-norvir/faq.html";
+"~^/faqcons.html$" "/doc/biology/2000-iapac-norvir/faqcons.html";
+"~^/faqina.html$" "/doc/biology/2000-iapac-norvir/faqina.html";
+"~^/.farthing_sun.html$" "/doc/biology/2000-iapac-norvir/farthing_sun.html";
+"~^/.list.html$" "/doc/biology/2000-iapac-norvir/list.html";
+"~^/.otherreg.html$" "/doc/biology/2000-iapac-norvir/otherreg.html";
+"~^/.physref.html$" "/doc/biology/2000-iapac-norvir/physref.html";
+"~^/.portability.html$" "/doc/biology/2000-iapac-norvir/portability.html";
+"~^/regimens/fortalg.html$" "/doc/biology/2000-iapac-norvir/regimens/fortalg.html";
+"~^/regimens/stadtlanders.html$" "/doc/biology/2000-iapac-norvir/regimens/stadtlanders.html";
+"~^/regimens/tebas.html$" "/doc/biology/2000-iapac-norvir/regimens/tebas.html";
+"~^/.share.html$" "/doc/biology/2000-iapac-norvir/share.html";
+"~^/.shoofs.html$" "/doc/biology/2000-iapac-norvir/shoofs.html";
+"~^/softgelnr.html$" "/doc/biology/2000-iapac-norvir/softgelnr.html";
+"~^/tolerability.html$" "/doc/biology/2000-iapac-norvir/tolerability.html";
+"~^/tolerability/abt_dintruff_tol1.html$" "/doc/biology/2000-iapac-norvir/tolerability/abt_dintruff_tol1.html";
+"~^/tolerability/abt_dintruff_tol2.html$" "/doc/biology/2000-iapac-norvir/tolerability/abt_dintruff_tol2.html";
+"~^/tolerability/abt_lichter_tol1.html$" "/doc/biology/2000-iapac-norvir/tolerability/abt_lichter_tol1.html";
+"~^/tolerability/butcher.html$" "/doc/biology/2000-iapac-norvir/tolerability/butcher.html";
+"~^/tolerability/cohen.html$" "/doc/biology/2000-iapac-norvir/tolerability/cohen.html";
+"~^/tolerability/dejar_alc.html$" "/doc/biology/2000-iapac-norvir/tolerability/dejar_alc.html";
+"~^/tolerability/farthing.html$" "/doc/biology/2000-iapac-norvir/tolerability/farthing.html";
+"~^/tolerability/henry.html$" "/doc/biology/2000-iapac-norvir/tolerability/henry.html";
+"~^/tolerability/hirschhorntips.html$" "/doc/biology/2000-iapac-norvir/tolerability/hirschhorntips.html";
+"~^/tolerability/royaltips.html$" "/doc/biology/2000-iapac-norvir/tolerability/royaltips.html";
+"~^/.urgnorvirnr.html$" "/doc/biology/2000-iapac-norvir/urgnorvir.html";
+"~^/.urgnorvir.html$" "/doc/biology/2000-iapac-norvir/urgnorvir.html";
+"~^/urgnorvirnr.html$" "/doc/biology/2000-iapac-norvir/urgnorvirnr.html";
+"~^/doc/sr/2015interpol-pharmaceuticals\.pdf.*$" "/doc/darknet-markets/2015-interpol-pharmaceuticals.pdf";
+"~^/doc/1997-hatton\.pdf.*$" "/doc/dual-n-back/1997-hatton.pdf";
+"~^/doc/insight-porn/fiction/gene-wolfe/suzanne-delage/2023-10-28-gwern-midjourneyv5-germanexpressionistlinocutofsinisternewenglandtowninwinter-thumbnail-red.jpg$" "/doc/fiction/gene-wolfe/suzanne-delage/2023-10-28-gwern-midjourneyv5-germanexpressionistlinocutofsinisternewenglandtowninwinter-thumbnail-red.jpg";
+"~^/doc/genetics/2017-04-19-expandingbrain-transhumangeneticenlightenment.jpg$" "/doc/genetics/selection/2017-04-19-expandingbrain-transhumangeneticenlightenment.jpg";
+"~^/Crops/index$" "/crop";
+"~^/doc/melatonin/1998-Lewy\.pdf.*$" "/doc/melatonin/1998-lewy.pdf";
+"~^/newsletter/rss$" "https://gwern.substack.com/feed";
+"~^/doc/psychology/1941-cleckley-maskofsanity$" "/doc/psychiatry/1941-cleckley-maskofsanity.pdf";
+"~^/doc/psychology/1949-stouffer-theamericansoldier-v4-adjustmentduringarmylife\.pdf.*$" "/doc/psychology/1950-stouffer-theamericansoldier-v4-measurementandprediction.pdf";
+"~^/d1oc/psychology/1952-asch\.pdf.*$" "/doc/psychology/1952-asch.pdf";
+"~^/doc/psychology/2020-10-26-1$" "/doc/psychology/2020-10-26-dyqz-rdataisbeautiful-iasked16kpeoplehowmanyholescertainobjectshave.html";
+"~^/doc/psychology/2019-01-%C3%B0$" "/doc/psychology/index";
+"~^/doc/psychology/okcupid/weexperimentonhu-manbeings.html$" "/doc/psychology/okcupid/weexperimentonhumanbeings.html";
+"~^/Fragment$" "/fiction/fragment";
+"~^/doc/sociology/1981guba-effectiveevaluation\.pdf.*$" "/doc/sociology/1981-guba-effectiveevaluation.pdf";
+"~^/doc/rotten.co...lly/index.html$" "/doc/rotten.com/library/bio/entertainers/pundits/bill-oreilly/index.html";
+"~^/everything/.*$" "/everything";
+"~^/haskell/Wikipedia-RSS-Archive-Bo$" "/haskell/wikipedia-rss-archive-bot";
+"~^/.index.html$" "/index";
+"~^/Scaling-hypot$" "/scaling-hypothesis";
+"~^//phpsso_.*$" "/static/404.html";
+"~^/static/font/NotoEmoji-Regular.ttf$" "/static/font/noto-emoji/NotoEmoji-Regular.ttf";
+"~^/doc/triple-question-mark.png$" "/static/img/triple-question-mark.png";
+"~^/terrorism-is-not-Effective$" "/terrorism-is-not-effective";
+"~^/doc/genetics/heritable/2019-tam-doi.*$" "/doc/genetics/heritable/2019-tam.pdf";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~/.*mailto:.*$" "/static/404";
