--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -16697,6 +16697,59 @@
 "~^/doc/triple-question-mark.png$" "/static/img/triple-question-mark.png";
 "~^/terrorism-is-not-Effective$" "/terrorism-is-not-effective";
 "~^/doc/genetics/heritable/2019-tam-doi.*$" "/doc/genetics/heritable/2019-tam.pdf";
+"~^/doc/logo_pan_158.gif$" "/static/404";
+"~^/doc/genetics/heritable/correlation/1990-grove.Merika.*$" "/doc/genetics/heritable/correlation/1990-grove.pdf";
+"~^/1994-falk$" "/doc/statistics/bayes/1994-fal";
+"~^/doc/1988-ammons\.pdf.*$" "/doc/psychology/spaced-repetition/1988-ammons.pdf";
+"~^/doc/rotten.com/librry/index.html$" "/doc/rotten.com/library/index.html";
+"~^/build/$" "/static/build/";
+"~^/webui/$" "/static/build/index";
+"~^/static/extracts-content$" "/static/extracts-content.js";
+"~^/doc/statistics/decision/2010-paul.pd.aspx$" "/doc/statistics/decision/2010-paul.pdf";
+"~^/Third-party_software$" "https://en.wikipedia.org/wiki/Third-party_software_component";
+"~^/List_of_years_in_science$" "https://en.wikipedia.org/wiki/List_of_years_in_science";
+"~^/List_of_games_that_Buddha_would_not_play$" "https://en.wikipedia.org/wiki/List_of_games_that_Buddha_would_not_play";
+"~^/haskell/goodreadstomarkdown.hs$" "/haskell/goodreadsToMarkdown.hs";
+"~^/GPT-3\).*$" "/gpt-3";
+"~^/doc/technology/2018-%EF.*$" "/doc/technology/index";
+"~^/doc/technology/2017-02-%EF%BF%BD.*$" "/doc/technology/2017-02-05-cms-ahistoryofimdbforums.html";
+"~^/doc/spac....edrepetition/1939-sp$" "/doc/psychology/spaced-repetition/1939-spitzer.pdf";
+"~^/doc/psychology/spaced%E2%80%91repetition/1993%E2%80%91bahrick\.pdf.*$" "/doc/psychology/spaced-repetition/1993-bahrick.pdf";
+"~^/doc/psychology...Please$" "/doc/psychology/index";
+"~^/doc/psychology/personality/psychopa$" "/doc/psychology/personality/psychopathy/index";
+"~^/doc/psychology/nature/2023-05-ginkgo\.pdf.*$" "/doc/psychology/nature/index";
+"~^/doc/modafinil/darknet-market/2014-01-01.30$" "/doc/modafinil/darknet-market/2014-01-01.tar.xz";
+"~^/doc/iq/47.1sternberg\.pdf.*$" "/doc/iq/2001-sternberg.pdf";
+"~^/doc/gpt/2020-kaplan-figure7-rnnsvstransformers$" "/doc/ai/nn/transformer/gpt/2020-kaplan-figure7-rnnsvstransformers.png";
+"~^/doc/economics/2012-varoufakis$" "/doc/economics/2012-varoufakis-teamfortress2arbitrage.html";
+"~^/doc/cat/catnip/survey/2017-07-30-%EF/*$" "/doc/cat/psychology/drug/catnip/survey/2017-07-30-gs-pilot.csv";
+"~^/DNB-FAQTa.*$" "/dnb-faq";
+"~^/contact_us.asp$" "/links#contact";
+"~^/bitcoin-is-worse-is-better&l$" "/bitcoin-is-worse-is-better";
+"~^/Danboru$" "/danbooru";
+"~^/donbooru2018$" "/danbooru2021#danbooru2018";
+"~^/Death_Note_Anonymity$" "/death-note-anonymity";
+"~^/Van_Dine$" "https://07th-expansion.fandom.com/wiki/Van_Dine%27s_Commandments";
+"~^/doc/cs/2011-pellegrini\.pdf.*$" "/doc/cs/algorithm/2011-pellegrino.pdf";
+"~^/Black-market-sur$" "/dnm-survival";
+"~^/doc/2009-qiu\.pdf.*$" "/doc/dual-n-back/2009-qiu.pdf";
+"~^/doc/economics/2009-friedman-seasteadingpracticalguide\.pdf.*$" "/doc/economics/2009-friedman-seasteadingpracticalguide.pdf";
+"~^/doc/mooreslaw-backblaze-2017-costpergbharddrive.jpg$" "/doc/economics/mooreslaw-backblaze-2017-costpergbharddrive.jpg";
+"~^/doc/fiction/gene-wolfe/suzanne-delage/fiction/gene-wolfe/suzanne-delage/2023-10-28-gwern-midjourneyv5-germanexpressionistlinocutofsinisternewenglandtowninwinter-thumbnail-red.jpg$" "/doc/fiction/gene-wolfe/suzanne-delage/2023-10-28-gwern-midjourneyv5-germanexpressionistlinocutofsinisternewenglandtowninwinter-thumbnail-red.jpg";
+"~^/idocs$" "/doc/index";
+"~^/doc/longevity/2744-decabo\.pdf.*$" "/doc/longevity/2019-decabo.pdf";
+"~^/doc/psychologie/personality/conscientiousness/2006-block\.pdf.*$" "/doc/psychology/personality/conscientiousness/2006-block.pdf";
+"~^/doc/qi/index$" "/doc/iq/index";
+"~^/doc/sociology/2019horowitz\.pdf.*$" "/doc/sociology/preference-falsification/2019-horowitz.pdf";
+"~^/doc/statistics/order/comparison/1978-elo-thera-tingofchessplayerspastandpresent\.pdf.*$" "/doc/statistics/order/comparison/1978-elo-theratingofchessplayerspastandpresent.pdf";
+"~^/drug-heuristics.md$" "/drug-heuristic";
+"~^/gfpt3$" "/gpt-3";
+"~^/hpmor-predictions.md$" "/hpmor-prediction";
+"~^/readme.htm$" "/index";
+"~^/the-Existential-Risk-of-Mathematical-Error$" "/math-error";
+"~^/contacts$" "/me#contact";
+"~^/Nicotine.The$" "/nicotine";
+"~^/doc/ai/nn/gan/stylegan/anime/favicon.ico$" "/static/img/favicon.ico";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~/.*mailto:.*$" "/static/404";
@@ -22559,6 +22612,11 @@
 "~^/.*RemoteApplicationMetadata.*$" "/static/404";
 "~^/.*openidm/.*$" "/static/404";
 "~^/.*assessment_thanks.*$" "/static/404";
+"~^/deskartdecor.*$" "/static/404";
+"~^//\*\*/AND.*$" "/static/404";
+"~^/hcg-injections.*$" "/static/404";
+"~^/.*weight-loss-tips/.*$" "/static/404";
+"~^/.avatar/.*$" "/static/404";
 
 # removed feature:
 "~^/static/previews/.*\.png$" "/static/404";
