nginx: fallback: try to guide people loading /index.htmls to the right /index

--- a/nginx/gwern.net.conf
+++ b/nginx/gwern.net.conf
@@ -992,10 +992,19 @@ server {
         ## Strip all query-parameters which are meaningless on Gwern.net & only yield 404s
         ## NOTE: '$args' = '?args' in 'foo.com/bar?args'
         set $args '';
+
+        ## when browsing files like `/doc/foo/2024-bar.pdf`, any experienced web user might try to browse by going to the index `/doc/foo/index.html`, but we actually put them at `/doc/foo/index`; instead of trying to create thousands of redirects for every possible error, we tell nginx to check for the /index file existing and if it does, load that instead
+        try_files $uri $uri/ @fallback;
      }
 
      # Enable redirection? TODO: I don't understand why this seems to be necessary in addition to `map`
      if ($new_uri != "" ) {
         rewrite ^(.*)$ $new_uri permanent;
       }
+
+    location @fallback {
+        # Handle the specific fallback for missing index.html or index.htm
+        rewrite ^(/.+)/index\.html?$ $1/index permanent;
+    }
+
 }
